# libran

./: .gitignore  Design  Doxyfile  EXPAND.md  LRbin.c  LRbinom.c  LRcauchy.c  LRdf.c  LRerlang.c  LRerror.c  LRgaus.c  LRgeom.c  LRgsn.c  LRlspline.c  LRnew.c  LRnexp.c  LRpiece.c  LRpoisson.c  LRset.c  LRuinvcdf.c  LRunif.c  LRversion.c  Makefile.am  README.md  acinclude.m4  ax_prog_doxygen.m4  configure.ac  libran-dox.conf.in  libran.h
aux/: gsn.c  gsncdf.c
supp/: BinomialDistribution.eps  CauchyLorentzDistribution.eps  ErlangDistribution.eps  GaussianNormalDistribution.eps  GeometricDistribution.eps  LRlogo.eps  LRlogo.xfig  LinearSplineDistribution.eps  PiecewiseUniformDistribution.eps  PoissonDistribution.eps  README  UserDefinedCDF.eps
tests/: .gitignore  LRtest.c  LRtunif.c  Makefile.am
urand/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  turand.c  urand.c  urand.h
